# SAE_S6_Voronoi

./: README.md  points.json
phase1/: demo.py  generator.py  points.json  voronoi.py
phase2/ChatGPT/: README.md  pyproject.toml
phase2/ChatGPT/examples/: points_sample.txt
phase2/ChatGPT/tests/: test_diagram_service.py  test_half_plane_algorithm.py  test_parsing.py  test_svg_exporter.py  test_theme.py
phase2/ChatGPT/voronoi_app/: __init__.py  constants.py  geometry.py  main.py  models.py  parsing.py  rendering.py  theme.py
phase2/ChatGPT/voronoi_app/algorithms/: __init__.py  base.py  half_plane.py
phase2/ChatGPT/voronoi_app/exporters/: image_exporter.py  svg_exporter.py
phase2/ChatGPT/voronoi_app/services/: diagram_service.py
phase2/ChatGPT/voronoi_app/ui/: app.py
phase2/ChatGPT/voronoi_tk_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phase2/Claude/: README.md  main.py  requirements.txt
phase2/Gemini/: README.md  (+2 more)
phase2/Kimi/: README.md  main.py  pyproject.toml  requirements.txt
phase2/Kimi/examples/: points.txt
phase2/Kimi/src/: __init__.py  exporters.py  file_parser.py  gui.py  models.py  voronoi_calculator.py
phase2/Kimi/tests/: __init__.py  test_exporters.py  test_file_parser.py  test_integration.py  test_models.py  test_voronoi_calculator.py
phase2/Kimi/tests/__pycache__/: test_exporters.cpython-312-pytest-9.0.2.pyc.603  test_file_parser.cpython-312-pytest-9.0.2.pyc.657  test_integration.cpython-312-pytest-9.0.2.pyc.657  test_models.cpython-312-pytest-9.0.2.pyc.657  test_voronoi_calculator.cpython-312-pytest-9.0.2.pyc.657
(+23 files in other folders)
